--- a/app/farmatec/package.json
+++ b/app/farmatec/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "react-validation": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
