--- a/app/farmatec/package.json
+++ b/app/farmatec/package.json
@@ -7,13 +7,17 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-tap-event-plugin": "^3.0.3",
+    "react-validation": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
