--- a/app/farmatec/package.json
+++ b/app/farmatec/package.json
@@ -8,8 +8,13 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "material-ui": "^0.20.2",
+    "msnodesqlv8": "^0.8.3",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
@@ -17,8 +22,16 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-tap-event-plugin": "^3.0.3",
-    "react-validation": "^3.0.7"
+    "react-validation": "^3.0.7",
+    "sequelize": "^5.19.0",
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8"
   },
+  "keywords": [
+    "sequelize",
+    "msnodesqlv8",
+    "mssql",
+    "sqlserver"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -41,6 +54,10 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.2"
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "tedious": "^6.4.0"
   }
 }
