--- a/app/farmatec/package.json
+++ b/app/farmatec/package.json
@@ -26,7 +26,7 @@
     "react-tap-event-plugin": "^3.0.3",
     "react-validation": "^3.0.7",
     "sequelize": "^5.19.0",
-    "sequelize-msnodesqlv8": "^0.2.6-beta.8"
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8",
     "react-tap-event-plugin": "^3.0.3"
   },
   "keywords": [
