--- a/api-rest/package.json
+++ b/api-rest/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "hapi": "^18.1.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.5",
